align forms in AuthView + some css fixes in postCreator

--- a/src/routes/PostCreator/components/PostCreatorView.scss
+++ b/src/routes/PostCreator/components/PostCreatorView.scss
@@ -2,6 +2,10 @@
 
 $valTop:50px;
 
+.postcreator{
+    margin-top: 50px;
+}
+
 .postdata {
     position:relative;
     &__top {
@@ -43,8 +47,4 @@ $valTop:50px;
             background:black;
         }
     }
-}
-
-.postcreator {
-    padding:15px;
 }
