--- a/src/styles/core.scss
+++ b/src/styles/core.scss
@@ -7,7 +7,7 @@ $karla : "Karla", sans-serif;
 $cousine : "Cousine", monospace;
 
 a:visited, a:hover, a:link, a:active{
-	outline: 0;
+    outline: 0;
 }
 
 
@@ -19,26 +19,26 @@ $backcolor:#F7FAFF;
 // Some best-practice CSS that's useful for most apps
 // Just remove them if they're not what you want
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 a {
-  color: inherit;
-  text-decoration: inherit;
+    color: inherit;
+    text-decoration: inherit;
 }
 
 html,
 body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  background:$backcolor;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background:$backcolor;
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 .flex {
@@ -49,11 +49,11 @@ body {
     }
 
     &-3 {
-      flex:3;
+        flex:3;
     }
 
     &-7 {
-      flex:7;
+        flex:7;
     }
 
     &-6 {
@@ -120,17 +120,17 @@ body {
 }
 
 .error-text {
-  color:red;
-  font-family: $karla;
-  text-align:center;
-  margin-bottom:20px;
+    color:red;
+    font-family: $karla;
+    text-align:center;
+    margin-bottom:20px;
 }
 
 .stop {
-  max-height: 350px;
-        margin: 0 auto;
-        width: auto;
-        display: block;
+    max-height: 350px;
+    margin: 0 auto;
+    width: auto;
+    display: block;
 }
 
 iframe {
@@ -139,79 +139,81 @@ iframe {
 
 
 .bigger {
-  position:fixed;
-  width:100%;
-  height:100%;
-  top:0;
-  left:0;
-  transform:translateY(100vh);
-  z-index: 100;
-  transition:0.7s;
-
-  &__filter {
-    background:black;
-    opacity: 0;
+    position:fixed;
     width:100%;
     height:100%;
-    transition:0.7s;
-  }
-
-  &__wrapper {
-    width:100%;
-    height:100%;
-    position: absolute;
-    left:0;
     top:0;
+    left:0;
+    transform:translateY(100vh);
+    z-index: 100;
+    transition:0.7s;
 
-    img, .iframeWrapper {
-      width:auto;
-      height:auto;
-      max-height:95%;
-      max-width: 95%;
-      margin: 0 auto;
-      display: block;
-      position:absolute;
-      top:50%;
-      left:50%;
-      transform:translate(-50%,-50%);
-    }
-
-    .iframeWrapper {
-      width:90%;
-      height:90%;
-
-      iframe {
+    &__filter {
+        background:black;
+        opacity: 0;
         width:100%;
         height:100%;
-      }
+        transition:0.7s;
     }
-  }
 
-  &__close {
-    position:absolute;
-    right:20px;
-    top:20px;
-    z-index: 10000;
-    cursor:pointer;
-    width:60px;
-    height:60px;
-  }
+    &__wrapper {
+        width:100%;
+        height:100%;
+        position: absolute;
+        left:0;
+        top:0;
 
-  &--active {
-    transform:translateY(0);
+        img, .iframeWrapper {
+            width:auto;
+            height:auto;
+            max-height:95%;
+            max-width: 95%;
+            margin: 0 auto;
+            display: block;
+            position:absolute;
+            top:50%;
+            left:50%;
+            transform:translate(-50%,-50%);
+        }
 
-    .bigger__filter {
-      opacity: 0.9;
+        .iframeWrapper {
+            width:90%;
+            height:90%;
+
+            iframe {
+                width:100%;
+                height:100%;
+            }
+        }
     }
-  }
+
+    &__close {
+        position:absolute;
+        right:20px;
+        top:20px;
+        z-index: 10000;
+        cursor:pointer;
+        width:60px;
+        height:60px;
+    }
+
+    &--active {
+        transform:translateY(0);
+
+        .bigger__filter {
+            opacity: 0.9;
+        }
+    }
 }
 
 .success {
-  display:none;
+    display:none;
 
-  &--active {
-    color:#2ecc71;
-    font-family: $karla;
-    display:block;
-  }
+    &--active {
+        margin-top: 20px;
+        color:#2ecc71;
+        font-family: $karla;
+        font-weight: 800;
+        display:block;
+    }
 }
